fix white spaces

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,12 +3,12 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 	height: 100vh;
+	padding-top: 200px;
 }
 .kitten{
 	background-image: url(../img/kitten-medium.png);
 	background-size: 40%;
 	background-repeat: no-repeat;
 	background-position: 50%;
-	height: 400px;
-	margin-top: 250px;
+	height: 100%;
 }
