--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -2,20 +2,21 @@
 	.background{
 		background-image: url(../img/dawn.png);
     background-position: 50%;
+    padding-top: 350px;
 	}
   .kitten{
     background-image: url(../img/kitten-large.png);
-    background-size: 70%; 
-    margin-top: 290px;
+    background-size: 70%;
+    height: 100%;
   }
 }
 @media (min-width: 1px) and (max-width: 499px){
   .background{
     background-image: url(../img/night.jpg);
     background-position: 50%;
+    padding-top: 50px;
   }
   .kitten{
     background-image: url(../img/kitten-small.png);
-    margin-top: 25%;
   }
 }
